[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "banana_bevy_utils"
publish = false
version = "0.1.0"

[features]
# 2d      = ["bevy/bevy_sprite", "bevy/bevy_winit"]
bevy_ui = ["bevy/bevy_ui"]
rng     = ["bevy_turborand"]
states  = []

[dependencies]
bevy           = { version = "0.9", default-features = false }
bevy_turborand = { version = "0.4", optional = true }
iyes_loopless  = { version = "0.9" }
